@@ -85,7 +85,13 @@
       <a href="./getinvolved.html">Get involved</a> page.</p>
       
     <h3>Latest release</h3>
-      <p>There is currently no separate development release.</p>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.0.tar.gz"
+      title="Source code of the latest stable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.7.0</a></div>
+
+      <!--<p>There is currently no separate development release.</p>-->
       
     <h3>Past releases</h3>
       <div class="download">
