@@ -71,6 +71,17 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>April 23rd 2007</h3>
+   	      <b>Unstable</b> version 0.7.0 released!  New in this release:
+   	      <ul>
+   	        <li>Note tagging (experimental -- looking for community input)</li>
+   	        <li>Tango-compliant link colors</li>
+   	        <li>UI cleanups in the recent notes menu and elsewhere</li>
+   	        <li>Updated translations</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_0/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>April 9th 2007</h3>
    	      Stable version 0.6.3 released!  This will be the version included by
    	      GNOME 2.18.1.  This release includes updated translations for the
