@@ -1,3 +1,8 @@
+2007-04-23  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.7.0 release.
+	* download.html: Ditto.
+
 2007-04-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.6.3 release.
